# grabtor

./: .gitignore  README.md  grabtor.cabal
Samples/: xmobar.config
Sources/: GraphicBatteryMonitor.hs  Main.hs
