name:                grabtor
version:             0.1.0.0
synopsis:            A graphic battery status monitor adapted for xmobar.
description:         Grabtor is a command line program to show the text based battery icon.
		     It is written as an external command to use it with xmobar.
license:             GPL-3
license-file:        LICENSE
author:              mhd aka 414d
maintainer:          mhd <414dbox at GMail>
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable grabtor
  main-is:             Main.hs
  ghc-options:	       -dynamic
  build-depends:       base >=4.7 && <4.8, filepath, directory, unix
  hs-source-dirs:      Sources
  default-language:    Haskell2010